--- a/src/components/navbar/header.css
+++ b/src/components/navbar/header.css
@@ -7,7 +7,6 @@
 }
 body{
     background-color: #F1F1F1;
-    height: 2200px;
 }
 #upIcon{
     display:flex;
@@ -64,6 +63,7 @@ body{
     position: relative;
 }
 #notify{
+    overflow: visible;
     display: flex;
     margin-right: 5px;
     justify-content: center;
@@ -74,6 +74,12 @@ body{
 #notify:hover{
     background-color: rgba(0, 0, 0, 0.05);
     border-radius: 50%;
+    cursor: pointer;
+}
+#notify:active{
+    /* background-color: rgba(0, 0, 0, 0.23); */
+    background-color: lime;
+    transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; 
     cursor: pointer;
 }
 #profileNotify{
@@ -149,7 +155,6 @@ body{
     margin-bottom: -5px;
     margin-right: 10px;
 }
-
 @media(max-width:768px){
     .menu{
         display: none;
