--- a/src/components/navbar/header.css
+++ b/src/components/navbar/header.css
@@ -77,8 +77,7 @@ body{
     cursor: pointer;
 }
 #notify:active{
-    /* background-color: rgba(0, 0, 0, 0.23); */
-    background-color: lime;
+    background-color: rgba(0, 0, 0, 0.23);
     transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; 
     cursor: pointer;
 }
