--- a/src/components/navbar/header.css
+++ b/src/components/navbar/header.css
@@ -5,9 +5,6 @@
     box-sizing: border-box;
     padding: 0;
 }
-body{
-    background-color: #F1F1F1;
-}
 #upIcon{
     display:flex;
     justify-content: center;
@@ -103,7 +100,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    box-shadow: #9F9F9F 1px 1px 10px 2px;
+    box-shadow: #9F9F9F 0px 4px 10px 1px;
 }
 #notifyTitle{
     display: flex;
@@ -118,6 +115,8 @@ body{
 #notifyCounter{
     color: #FFFFFF;
     font-size: 12px;
+    font-family: Lato;
+    font-weight: 700;
     position: relative;
     display: flex;
     align-items: center;
@@ -132,7 +131,7 @@ body{
 #cleanNotify{
     font-family: Lato;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 13px;
     position: relative;
     color: #c93b59;
     display: flex;
@@ -144,6 +143,7 @@ body{
     font-family: Lato;
     color: #3B4B5B;
     font-weight: 400;
+    font-size: 14px;
     width: 100%;
     display: flex;
     position: absolute;
@@ -174,7 +174,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    display: none;
 }
 #modalArrow{
     background-color: #C7C8C8;
