Adição página de edição de perfil + responsividade

--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -68,6 +68,9 @@ i{
 .boldInfo{
     font-weight: bolder;
 }
+.redEmphasis{
+    color: #C93B59;
+}
 .lightText{
     margin: 10px;
     color: #6C757D;
