Organização de arquivos, correção de visual de links

--- a/src/components/navbar/header.css
+++ b/src/components/navbar/header.css
@@ -214,6 +214,10 @@
     margin-bottom: -5px;
     margin-right: 10px;
 }
+a{
+    text-decoration: none;
+    color: currentColor;
+}
 @media(max-width:768px){
     .menu{
         display: none;
