--- a/src/pages/basicData/basicData.css
+++ b/src/pages/basicData/basicData.css
@@ -55,6 +55,7 @@ body{
     border-radius: 5px;
     outline: none;
     border: none;
+    cursor: pointer;
 }
 #upPhoto{
     margin: 10px;
@@ -101,6 +102,7 @@ body{
     border-radius: 7px;
     outline: none;
     border: none;
+    cursor: pointer;
 }
 @media(max-width:768px){
     .editProfile{
