--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -9,7 +9,7 @@ body{
     background-color: #F1F1F1;
 }
 .profilePanel{
-    padding-top: 10%;
+    padding-top: 11%;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -37,14 +37,17 @@ body{
     margin-bottom: 2%;
 }
 #instructionsProfile{
+    text-align: center;
     font-family: Lato;
     color: #C93B59;
-    font-size: 1.5em;
+    font-size: 2.2em;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 #instrucionsLine{
     width: 100%;
     height: 0px;
-    border-bottom: #B53550 1px solid;
+    border-bottom: #B53550 2px solid;
     margin: 15px 0px 15px 0px;
 }
 #textProfile1{
@@ -57,7 +60,7 @@ body{
 ul {
     list-style-type: none;
     margin-left: 30px;
-    margin-top: 20px;
+    margin-top: 1px;
     font-family: Lato;
     font-weight: 400;
 }
@@ -72,7 +75,6 @@ i{
     color: #C93B59;
 }
 .lightText{
-    margin: 10px;
     color: #6C757D;
     font-family: Lato, sans-serif;
     font-weight: 300;
