--- a/src/components/navbar/header.css
+++ b/src/components/navbar/header.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     padding: 0;
 }
+/* Logo */
 #upIcon{
     display:flex;
     justify-content: center;
@@ -21,6 +22,11 @@
     width: 75px;
     height: 70px;
 }
+#upIcon:active{
+    background-color: rgba(0, 0, 0, 0.23);
+    transition: all 200ms;
+    cursor: pointer;
+}
 #header{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -35,6 +41,7 @@
     flex-direction: row;
     align-items: center;
 }
+/* Menu de navegação superior "Explorar" e "Inscrições" */
 .menu{
     font-family: Lato;
     color: #3b4b5b;
@@ -54,6 +61,7 @@
 .menuItems:hover{
     color: #C93B59;
 }
+/* Ícone de notificações */
 .MuiSvgIcon-root>path{
     fill: currentColor;
     position: relative;
@@ -149,6 +157,7 @@
     justify-content: center;
     bottom: 15px;
 }
+/* Menu do perfil, navegação */
 #profileMenu{
     position: relative;
 }
@@ -218,6 +227,7 @@ a{
     text-decoration: none;
     color: currentColor;
 }
+/* Versão mobile */
 @media(max-width:768px){
     .menu{
         display: none;
