--- a/src/pages/basicData/basicData.css
+++ b/src/pages/basicData/basicData.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-* {
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
+/* Ocultar barra de rolagem, mantendo a rolagem ativa */
+body::-webkit-scrollbar { 
+	display: none;
 }
-body{
-    background-color: #F1F1F1;
-}
+
 .editProfile{
     padding-top: 10%;
     padding-bottom: 5%;
@@ -30,12 +27,14 @@ body{
     box-shadow: #DCDCDC 0px 4px 10px 1px;
     padding: 20px;
 }
+/* Coluna esquerda */
 .firstSection{
     display: flex;
     flex-direction: column;
     justify-content: center;
     grid-column: 1/2;
 }
+/* Coluna direita */
 .secondSection{
     display: flex;
     flex-direction: column;
@@ -79,20 +78,17 @@ body{
     font-weight: 400;
     font-size: 1em;
 }
+/* Sinalização de campo requerido, ênfase de texto */
 .redEmphasis{
     color: #C93B59;
 }
 .inputProfile{
+    font-family: Lato;
     margin: 5px 0px 5px 0px;
     padding: 15px;
     border-radius: 5px;
     border: #CED4DA solid 2px;
     height: 5vh;
-}
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
 }
 #submitFormButton{
     margin: 1%;
@@ -109,6 +105,7 @@ body{
     border: none;
     cursor: pointer;
 }
+/* Versão mobile */
 @media(max-width:768px){
     .editProfile{
         padding-top: 20%;
